# actix-server-csr

./: Cargo.toml  README.md
certs/: cert.pem  key.pem
certs/cert1/: cert.pem  key.pem
src/: main.rs
