[package]
name = "actix-server-csr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.0", features = ["openssl"] }
openssl = "0.10.59"
reqwest = { version = "0.11.22", features = ["native-tls", "json"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
